adding get for all the tables and adding crud to the users
