# internal/handlers/site.go
@@ -1,0 +1,67 @@
+package handlers
+
+import (
+	"adAli/internal/database"
+	"adAli/internal/filter"
+	"adAli/internal/models"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// GetSite godoc
+//
+//	@Summary		Get site
+//	@Description	Get all site or filter and order them using query parameters.
+//	@Description
+//	@Description	Filtering operators:
+//	@Description	:   (equals)
+//	@Description	!:  (not equals)
+//	@Description	>   (greater than)
+//	@Description	>=  (greater than or equal)
+//	@Description	<   (less than)
+//	@Description	<=  (less than or equal)
+//	@Description	~   (contains, case-insensitive)
+//	@Description
+//	@Description	Examples:
+//	@Description	/site?filter=is_active:true
+//	@Description	/site?filter=program_id:1
+//	@Description	/site?filter=bid_price>=1000
+//	@Description	/site?order_by=bid_price&sort=desc
+//	@Description	/site?order_by=created_at&order_by=bid_price&sort=desc&sort=asc
+//
+//	@Tags			Site
+//	@Produce		json
+//
+//	@Param			filter		query	[]string	false	"Filter expression. Can be repeated."
+//	@Param			order_by	query	[]string	false	"Fields to order by. Can be repeated."
+//	@Param			sort		query	[]string	false	"Sort direction for each order_by field (asc or desc). Can be repeated."
+//
+//	@Success		200		{array}		models.Site
+//	@Failure		400		{object}	map[string]string
+//	@Failure		500		{object}	map[string]string
+//	@Router			/site [get]
+func GetSite(c *gin.Context) {
+	query := database.DB.Model(&models.Site{}).Preload("User")
+
+	allowedFields := filter.AllowedFields(models.Site{})
+
+	var err error
+
+	query, err = filter.Apply(query, c, allowedFields)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	var site []models.Site
+
+	if err := query.Find(&site).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, site)
+}
