# internal/models/transaction.go
@@ -9,17 +9,17 @@ import (
 )
 
 type Transaction struct {
-	ID uint `gorm:"primaryKey"`
+	ID uint `gorm:"primaryKey" queryParam:"id"`
 
-	UserID uint `gorm:"not null"`
+	UserID uint `gorm:"not null" queryParam:"user_id"`
 	User   User
 
-	Name              string            `gorm:"size:100;not null"`
-	Amount            float64           `gorm:"type:numeric(12,2);not null"`
-	PaymentMethodType PaymentMethodType `gorm:"type:payment_method;not null"`
-	TransactionType   TransactionType   `gorm:"type:transaction_type;not null"`
-	StatusType        StatusType        `gorm:"type:status;not null"`
-	CreatedAt         time.Time
+	Name              string            `gorm:"size:100;not null" queryParam:"name"`
+	Amount            float64           `gorm:"type:numeric(12,2);not null" queryParam:"amount"`
+	PaymentMethodType PaymentMethodType `gorm:"type:payment_method;not null" queryParam:"payment_method_type"`
+	TransactionType   TransactionType   `gorm:"type:transaction_type;not null" queryParam:"transaction_type"`
+	StatusType        StatusType        `gorm:"type:status;not null" queryParam:"status_type"`
+	CreatedAt         time.Time `queryParam:"created_at"`
 	CompletedAt         time.Time
 	Metadata          TransactionMetaData `gorm:"type:jsonb"`
 }
